--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="navbar">
@@ -23,7 +23,7 @@
                     </li>
                     <div class="mega-menu">
                         <div class="image">
-                            <img src="/images/megamenu.png" alt="">
+                            <img src="./images/megamenu.png" alt="">
                         </div>
                         <div class="links">
                             <ul>
@@ -55,7 +55,7 @@
                     <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
                 </div>
                 <div class="image">
-                    <img src="/images/landing-image.png" alt="">
+                    <img src="./images/landing-image.png" alt="">
                 </div>
             </div>
             <a href="#articals"><i class="fa-solid fa-angles-down"></i></a>
@@ -65,7 +65,7 @@
             <div class="container">
                 <div class="box">
                     <div class="top-box">
-                        <img src="/images/cat-01.jpg" alt="">
+                        <img src="./images/cat-01.jpg" alt="">
                     </div>
                     <div class="middle-box">
                         <h3>Title</h3>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="box">
                     <div class="top-box">
-                        <img src="/images/cat-02.jpg" alt="">
+                        <img src="./images/cat-02.jpg" alt="">
                     </div>
                     <div class="middle-box">
                         <h3>Title</h3>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="box">
                     <div class="top-box">
-                        <img src="/images/cat-03.jpg" alt="">
+                        <img src="./images/cat-03.jpg" alt="">
                     </div>
                     <div class="middle-box">
                         <h3>Title</h3>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="box">
                     <div class="top-box">
-                        <img src="/images/cat-04.jpg" alt="">
+                        <img src="./images/cat-04.jpg" alt="">
                     </div>
                     <div class="middle-box">
                         <h3>Title</h3>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="box">
                     <div class="top-box">
-                        <img src="/images/cat-05.jpg" alt="">
+                        <img src="./images/cat-05.jpg" alt="">
                     </div>
                     <div class="middle-box">
                         <h3>Title</h3>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="box">
                     <div class="top-box">
-                        <img src="/images/cat-06.jpg" alt="">
+                        <img src="./images/cat-06.jpg" alt="">
                     </div>
                     <div class="middle-box">
                         <h3>Title</h3>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="box">
                     <div class="top-box">
-                        <img src="/images/cat-07.jpg" alt="">
+                        <img src="./images/cat-07.jpg" alt="">
                     </div>
                     <div class="middle-box">
                         <h3>Title</h3>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="box">
                     <div class="top-box">
-                        <img src="/images/cat-08.jpg" alt="">
+                        <img src="./images/cat-08.jpg" alt="">
                     </div>
                     <div class="middle-box">
                         <h3>Title</h3>
@@ -173,22 +173,22 @@
             <div class="section-title">Gallery</div>
             <div class="container">
                 <div class="box">
-                    <img src="/images/gallery-01.png" alt="">
+                    <img src="./images/gallery-01.png" alt="">
                 </div>
                 <div class="box">
-                    <img src="/images/gallery-02.png" alt="">
+                    <img src="./images/gallery-02.png" alt="">
                 </div>
                 <div class="box">
-                    <img src="/images/gallery-03.jpg" alt="">
+                    <img src="./images/gallery-03.jpg" alt="">
                 </div>
                 <div class="box">
-                    <img src="/images/gallery-04.png" alt="">
+                    <img src="./images/gallery-04.png" alt="">
                 </div>
                 <div class="box">
-                    <img src="/images/gallery-05.jpg" alt="">
+                    <img src="./images/gallery-05.jpg" alt="">
                 </div>
                 <div class="box">
-                    <img src="/images/gallery-06.png" alt="">
+                    <img src="./images/gallery-06.png" alt="">
                 </div>
             </div>
         </div>
@@ -197,7 +197,7 @@
             <div class="container">
                 <div class="box">
                     <div class="image">
-                        <img src="/images/download.jpeg" alt="">
+                        <img src="./images/download.jpeg" alt="">
                     </div>
                     <div class="text">
                         <h3>Quality</h3>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="/images/download (1).jpeg" alt="">
+                        <img src="./images/download (1).jpeg" alt="">
                     </div>
                     <div class="text">
                         <h3>Time</h3>
@@ -217,7 +217,7 @@
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="/images/download (2).jpeg" alt="">
+                        <img src="./images/download (2).jpeg" alt="">
                     </div>
                     <div class="text">
                         <h3>Passion</h3>
@@ -232,7 +232,7 @@
             <div class="container">
                 <div class="box">
                     <div class="image">
-                        <img src="/images/avatar-01.png" alt="">
+                        <img src="./images/avatar-01.png" alt="">
                     </div>
                     <div class="name">
                         <div>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="/images/avatar-02.png" alt="">
+                        <img src="./images/avatar-02.png" alt="">
                     </div>
                     <div class="name">
                         <div>
@@ -274,7 +274,7 @@
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="/images/avatar-03.png" alt="">
+                        <img src="./images/avatar-03.png" alt="">
                     </div>
                     <div class="name">
                         <div>
@@ -295,7 +295,7 @@
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="/images/avatar-04.png" alt="">
+                        <img src="./images/avatar-04.png" alt="">
                     </div>
                     <div class="name">
                         <div>
@@ -316,7 +316,7 @@
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="/images/avatar-05.png" alt="">
+                        <img src="./images/avatar-05.png" alt="">
                     </div>
                     <div class="name">
                         <div>
@@ -337,7 +337,7 @@
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="/images/avatar-06.png" alt="">
+                        <img src="./images/avatar-06.png" alt="">
                     </div>
                     <div class="name">
                         <div>
@@ -364,7 +364,7 @@
                 <div class="box">
                     <div class="image-icons">
                         <div class="image">
-                            <img src="/images/team-01.jpg" alt="">
+                            <img src="./images/team-01.jpg" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-brands fa-facebook-f"></i>
@@ -381,7 +381,7 @@
                 <div class="box">
                     <div class="image-icons">
                         <div class="image">
-                            <img src="/images/team-02.jpg" alt="">
+                            <img src="./images/team-02.jpg" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-brands fa-facebook-f"></i>
@@ -398,7 +398,7 @@
                 <div class="box">
                     <div class="image-icons">
                         <div class="image">
-                            <img src="/images/team-03.jpg" alt="">
+                            <img src="./images/team-03.jpg" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-brands fa-facebook-f"></i>
@@ -415,7 +415,7 @@
                 <div class="box">
                     <div class="image-icons">
                         <div class="image">
-                            <img src="/images/team-04.jpg" alt="">
+                            <img src="./images/team-04.jpg" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-brands fa-facebook-f"></i>
@@ -432,7 +432,7 @@
                 <div class="box">
                     <div class="image-icons">
                         <div class="image">
-                            <img src="/images/team-05.png" alt="">
+                            <img src="./images/team-05.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-brands fa-facebook-f"></i>
@@ -449,7 +449,7 @@
                 <div class="box">
                     <div class="image-icons">
                         <div class="image">
-                            <img src="/images/team-06.png" alt="">
+                            <img src="./images/team-06.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-brands fa-facebook-f"></i>
@@ -466,7 +466,7 @@
                 <div class="box">
                     <div class="image-icons">
                         <div class="image">
-                            <img src="/images/team-07.jpg" alt="">
+                            <img src="./images/team-07.jpg" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-brands fa-facebook-f"></i>
@@ -483,7 +483,7 @@
                 <div class="box">
                     <div class="image-icons">
                         <div class="image">
-                            <img src="/images/team-08.jpg" alt="">
+                            <img src="./images/team-08.jpg" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-brands fa-facebook-f"></i>
@@ -568,7 +568,7 @@
             <div class="section-title">Our skills</div>
             <div class="container">
                 <div class="left">
-                    <img src="/images/skills.png" alt="">
+                    <img src="./images/skills.png" alt="">
                 </div>
                 <div class="right">
                     <div class="box">
@@ -606,12 +606,12 @@
             <div class="section-title">How it works?</div>
             <div class="container">
                 <div class="left">
-                    <img src="/images/work-steps.png" alt="">
+                    <img src="./images/work-steps.png" alt="">
                 </div>
                 <div class="right">
                     <div class="box">
                         <div class="image">
-                            <img src="/images/work-steps-1.png" alt="">
+                            <img src="./images/work-steps-1.png" alt="">
                         </div>
                         <div class="title">
                             <h3>Business Analysis</h3>
@@ -620,7 +620,7 @@
                     </div>
                     <div class="box">
                         <div class="image">
-                            <img src="/images/work-steps-2.png" alt="">
+                            <img src="./images/work-steps-2.png" alt="">
                         </div>
                         <div class="title">
                             <h3>Architecture</h3>
@@ -629,7 +629,7 @@
                     </div>
                     <div class="box">
                         <div class="image">
-                            <img src="/images/work-steps-3.png" alt="">
+                            <img src="./images/work-steps-3.png" alt="">
                         </div>
                         <div class="title">
                             <h3>Developement</h3>
@@ -644,7 +644,7 @@
             <div class="container">
                 <div class="top-holder">
                     <div class="image">
-                        <img src="/images/events.png" alt="">
+                        <img src="./images/events.png" alt="">
                     </div>
                     <div class="info">
                         <div class="timer">
@@ -670,7 +670,7 @@
             <div class="container">
                 <div class="box">
                     <h3>Basic</h3>
-                    <img src="/images/hosting-basic.png" alt="">
+                    <img src="./images/hosting-basic.png" alt="">
                     <p>$15<span>Per Month</span></p>
                     <ul>
                         <li>10GB HDD Space</li>
@@ -683,7 +683,7 @@
                 </div>    
                 <div class="box">
                     <h3>Advanced</h3>
-                    <img src="/images/hosting-basic.png" alt="">
+                    <img src="./images/hosting-basic.png" alt="">
                     <p>$25<span>Per Month</span></p>
                     <ul>
                         <li>20GB HDD Space</li>
@@ -696,7 +696,7 @@
                 </div>    
                 <div class="box">
                     <h3>Professional</h3>
-                    <img src="/images/hosting-basic.png" alt="">
+                    <img src="./images/hosting-basic.png" alt="">
                     <p>$45<span>Per Month</span></p>
                     <ul>
                         <li>50GB HDD Space</li>
@@ -753,7 +753,7 @@
                 </div>
                 <div class="image">
                     <div>
-                        <img src="/images/video-preview.jpg" alt="">
+                        <img src="./images/video-preview.jpg" alt="">
                     </div>
                     <div>
                         <p>Everything About The Virtual Hosts</p>
@@ -791,7 +791,7 @@
                 <div class="description">
                     <h2>We Have A Discount</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto ad deserunt, hic laudantium officiis porro magnam suscipit facere, quisquam, harum minima quos fuga aliquam blanditiis vero facilis accusamus debitis sunt.</p>
-                    <img src="/images/discount.png" alt="">
+                    <img src="./images/discount.png" alt="">
                 </div>
                 <div class="inputs">
                     <h3>Request A Discount</h3>
@@ -856,22 +856,22 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="/images/gallery-01.png" alt="">
+                    <img src="./images/gallery-01.png" alt="">
                 </div>
                 <div class="image">
-                    <img src="/images/gallery-02.png" alt="">
+                    <img src="./images/gallery-02.png" alt="">
                 </div>
                 <div class="image">
-                    <img src="/images/gallery-03.jpg" alt="">
+                    <img src="./images/gallery-03.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="/images/gallery-04.png" alt="">
+                    <img src="./images/gallery-04.png" alt="">
                 </div>
                 <div class="image">
-                    <img src="/images/gallery-05.jpg" alt="">
+                    <img src="./images/gallery-05.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="/images/gallery-06.png" alt="">
+                    <img src="./images/gallery-06.png" alt="">
                 </div>
             </div>
         </div>
