--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="navbar">
         <nav>
             <div class="logo">
-                <h1>Elzero</h1>
+                <h1>Viper</h1>
             </div>
             <div class="nav-list">
                 <ul>
@@ -51,7 +51,7 @@
         <div class="first-section">
             <div class="container">
                 <div class="main-title">
-                    <h1>Welcome, To Elzero World</h1>
+                    <h1>Welcome, To Viper World</h1>
                     <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
                 </div>
                 <div class="image">
@@ -807,7 +807,7 @@
     <footer>
         <div class="container">
             <div class="box">
-                <h1>Elzero</h1>
+                <h1>Viper</h1>
                 <div class="icons">
                     <i class="fa-brands fa-facebook-f"></i>
                     <i class="fa-brands fa-twitter"></i>
